updates to project02
